# mopidy-ytmusic

./: pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
mopidy_ytmusic/: backend.py  library.py  playback.py
