[tool.black]
target-version = ["py311"]
line-length = 88

[tool.isort]
profile = "black"
known_tests = "tests"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER"

[tool.poetry]
name = "mopidy-ytmusic"
version = "0.3.91"
description = "Mopidy extension for playing music/managing playlists in YouTube Music"
authors = ["Ozymandias (Tomas Ravinskas) <tomas.rav@gmail.com>"]
license = "Apache-2.0"
packages = [{ include = "mopidy_ytmusic" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
Mopidy = ">=3,<4"
yt-dlp = ">=2025.1.1"
ytmusicapi = ">=1.11.4,<2.0.0"
requests = ">=2.31.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
Sphinx = "^7.2.6"
isort = "^5.13.2"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mopidy.ext"]
ytmusic = "mopidy_ytmusic:Extension"
